[package]
name = "maelstrom_echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
color-eyre = "0.6.2"
serde = { version = "1.0.159", features = ["serde_derive"] }
serde_json = "1.0.95"
text_io = "0.1.12"
thiserror = "1.0.40"
